--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,118 @@
-.App {
-  text-align: center;
+body{
+    background-color: #f8f9fa;
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main{
+    position: relative;
+    overflow-x: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logo-container{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    color: white;
+    margin-top: 2.2rem;
+    font-size: 0.9rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.navbar{
+    position: absolute;
+    top: 2rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
+.container{
+    margin: 0 5%;
+    width: 90%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navBar {
+    display: flex;
+    gap: 5%;
+}
+
+.blackNav a, .blackLogo {
+    color: black!important;
+}
+
+.navBar a{
+    text-decoration: none;
+    color: white;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.navBar a:hover{
+    text-decoration: underline;
+}
+
+.active{
+    text-decoration: underline;
+}
+
+.main-content{
+    height: 300%;
+    width: 100%;
+}
+
+.navbar-content > button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* App.css */
+@media (max-aspect-ratio: 1/1) {
+    .main-content {
+        width: 100vw;
+    }
+    .links {
+        overflow: hidden;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        background: #fff;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        transform: translateY(-100%);
+        transition: transform 0.3s ease-in-out;
+        z-index: 100;
+    }
+
+    .links.show-menu {
+        transform: translateY(0%);
+    }
+
+    .links a {
+        margin: 20px 0;
+        font-size: 1.5rem;
+        color: #000;
+        cursor: pointer;
+    }
+
+    .links a:hover {
+        color: #00BCD4;
+    }
+
+    .links .close-btn {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        font-size: 2rem;
+        cursor: pointer;
+    }
 }
